# zigzag

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE.md  Makefile  README.md  USECASES.md  build.zig  build.zig.zon  gen.sh  mv.sh  zigzag.sh
.github/workflows/: ci.yml  release.yml
ast/: CMakeLists.txt  test.py
ast/docs/: add_grammar.md  integration.md
ast/src/: chunker.c  chunker.h
docs/: ARCHITECTURE.md
docs/plans/: 2026-03-03-dashboard-overhaul-design.md  2026-03-03-dashboard-overhaul.md  2026-03-03-virtual-viewer-design.md  2026-03-03-virtual-viewer.md  2026-03-04-output-refactor-llm-report-design.md  2026-03-04-output-refactor-llm-report.md  2026-03-06-large-codebase-scalability-design.md  2026-03-06-large-codebase-scalability-plan.md  2026-03-07-combined-html-report-design.md  2026-03-07-combined-html-report-plan.md  2026-03-07-dashboard-redesign-design.md  2026-03-07-dashboard-redesign-plan.md  2026-03-08-combined-dashboard-virtualization-design.md  2026-03-08-combined-dashboard-virtualization.md
docs/superpowers/plans/: 2026-03-11-bench-subcommand.md  2026-03-22-handlers-reorganisation.md
docs/superpowers/specs/: 2026-03-11-bench-subcommand-design.md  2026-03-22-handlers-reorganisation-design.md
scripts/: setup.py  zigzag.sh
src/: cli_integration.zig  main.zig  root.zig  runtime.zig
src/benchmarks/: benchmark.zig  benchmark_test.zig  file_benchmark.zig
src/cache/: Cache.zig  Cache_test.zig  Entry.zig  entry.zig  impl.zig  impl_test.zig
src/cli/: config.zig  context.zig  flags.zig  handler.zig  handlers.zig  logo.zig  options.zig  process_chunk.zig  runner.zig  stats.zig  version.zig  writer.zig
src/cli/commands/: bench.zig  bench_test.zig  config.zig  logger.zig  report.zig  runner.zig  serve.zig  serve_test.zig  server.zig  stats.zig  watch.zig  writer.zig
src/cli/handlers/: chunk_size.zig  help.zig  html.zig  ignore.zig  init.zig  json.zig  llm_report.zig  log.zig  logo.zig  mmap.zig  no_watch.zig  open.zig  output.zig  output_dir.zig  path.zig  port.zig  skip_cache.zig  small.zig  test_config.zig  timezone.zig  version.zig  watch.zig
src/cli/version/: fallback.zig  version.zig  version_test.zig
src/conf/: FileConf.zig  FileConf_test.zig  file.zig  file_new.zig  file_new_test.zig  file_test.zig
src/fs/: MappedFile.zig  Walk.zig  cache.zig  directory.zig  directory_test.zig  file.zig  stdout.zig  utils.zig  walk.zig  watcher.zig
src/fs/mmap/: common.zig  unix.zig  win.zig
src/fs/watcher/: linux.zig  linux_test.zig  macos.zig  macos_test.zig  skip_dirs.zig  windows.zig  windows_test.zig
src/jobs/: Job.zig  entries.zig  entries_test.zig  entry.zig  inspect.zig  inspect_test.zig  job.zig  process.zig
src/logger/: ConsoleWriter.zig  LineWriter.zig  Logger.zig  Logger_test.zig  Message.zig  ReportStats.zig  Style.zig  Summary.zig  console.zig  file.zig  report.zig
src/platform/: browser.zig  console.zig  cpu.zig  net.zig  socket.zig  watch_event.zig  watcher.zig
src/platform/linux/: Watcher.zig  Watcher_test.zig  cpu.zig  inotify.zig
src/platform/macos/: Watcher.zig  Watcher_test.zig  cpu.zig  kqueue.zig
src/platform/unix/: net.zig  socket.zig
src/platform/windows/: Watcher.zig  Watcher_test.zig  api.zig  console.zig  cpu.zig  net.zig  socket.zig  watch.zig
src/progress/: Progress.zig  progress_test.zig
src/templates/: bundle.py  combined-dashboard.html  dashboard.html  package-lock.json  package.json  test_bundle.py  tsconfig.json
src/templates/src/: charts.ts  combined-types.ts  combined.html  combined.ts  constants.ts  content.ts  dashboard.css  dashboard.js  header.ts  highlight-worker.js  highlight.ts  highlight.worker.ts  main.ts  prism-theme.css  state.ts  table.ts  template.html  theme.ts  types.ts  utils.ts  viewer.ts  virtual-table.ts  watch.ts
src/utils/: colors.zig  host.zig  host_test.zig  utils.zig
src/utils/colors/: colors_test.zig
src/utils/fmt/: fmt.zig  fmt_test.zig
src/utils/logger/: ConsoleWriter.zig  FinalSummary.zig  Message.zig  Phase.zig  Summary.zig  console.zig  logger.zig  logger_test.zig  report.zig
src/utils/progress/: Progress.zig  progress.zig  (+1 more)
src/walker/: Context.zig  callback.zig  context.zig
src/workers/: Pool.zig  WaitGroup.zig  pool.zig  wait_group.zig
(+153 files in other folders)
